--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -23,6 +23,7 @@
     <string name="create">Создать</string>
     <string name="current_on">Актуально на</string>
     <string name="dark">Темная</string>
+    <string name="download">Скачать</string>
     <string name="date">Дата</string>
     <string name="date_and_time">Дата и время</string>
     <string name="day_of_week">День недели</string>
