--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="confirm">Confirm</string>
     <string name="create">Create</string>
     <string name="current_on">Current on</string>
+    <string name="curriculum_number">Curriculum number</string>
     <string name="dark">Dark</string>
     <string name="date">Date</string>
     <string name="date_and_time">Date and time</string>
@@ -32,6 +33,8 @@
     <string name="delete">Delete</string>
     <string name="delete_event">Delete class</string>
     <string name="delete_schedule">Delete schedule</string>
+    <string name="developer">Developer</string>
+    <string name="do_you_want_continue">Do you really want to continue?</string>
     <string name="download">Download</string>
     <string name="edit">Edit</string>
     <string name="editing">Editing</string>
@@ -58,6 +61,8 @@
     <string name="event_visibility_alert">Please note, class will no longer appear in the schedule</string>
     <string name="events_count_error">The maximum number of classes per day has been reached</string>
     <string name="every_week">Every week</string>
+    <string name="example_group" translatable="false">УВВ-311</string>
+    <string name="example_lecturer" translatable="false">Иванов Иван</string>
     <string name="failed_update">Failed to update schedule</string>
     <string name="find">Find</string>
     <string name="for_example">For example</string>
@@ -73,6 +78,7 @@
     <string name="impossible_restore_eventextra">It will be impossible to restore comments and tags for pairs</string>
     <string name="lecturers">Lecturers</string>
     <string name="light">Light</string>
+    <string name="list_teachers">List of teachers for the curriculum</string>
     <string name="logs_not_found">Logs not found</string>
     <string name="make_default">Make default</string>
     <string name="my">My</string>
@@ -90,8 +96,10 @@
     <string name="no_saved_schedule">No saved schedule</string>
     <string name="no_start_date_specified">No start date specified</string>
     <string name="no_start_time_specified">No start time specified</string>
+    <string name="not_delete_schedules">Do not delete schedules</string>
     <string name="not_specified">Not specified</string>
     <string name="nothing_found">Nothing found</string>
+    <string name="ok">Ok</string>
     <string name="once_week">Once every %1$d week</string>
     <string name="open">Open</string>
     <string name="people">People</string>
@@ -104,6 +112,7 @@
     <string name="repetition">Repetition</string>
     <string name="report_a_problem">Report a problem</string>
     <string name="return_default">Return default</string>
+    <string name="return_default_schedule">Return to the default schedule</string>
     <string name="review">Review</string>
     <string name="room">Room</string>
     <string name="room_number">Room number</string>
@@ -116,11 +125,13 @@
     <string name="schedule_name">Schedule name</string>
     <string name="schedules">Schedules</string>
     <string name="search">Search</string>
+    <string name="search_curriculum_advice">Please use the curriculum identification number to search</string>
     <string name="search_or_create">Search or create</string>
     <string name="send_logs">Send logs</string>
     <string name="send_logs_by_email">Send logs by email</string>
     <string name="serialization_error">Serialization error</string>
     <string name="server_error">Server error</string>
+    <string name="services">Services</string>
     <string name="settings">Settings</string>
     <string name="show_count_classes">Show count classes</string>
     <string name="show_event">Show class</string>
@@ -134,6 +145,7 @@
     <string name="theme">Theme</string>
     <string name="time">Time</string>
     <string name="time_is_chosen_incorrectly">Time is chosen incorrectly</string>
+    <string name="timeout_expired">Timeout expired</string>
     <string name="today">Today</string>
     <string name="today_schedule">Today schedule</string>
     <string name="tomorrow">Tomorrow</string>
@@ -142,6 +154,4 @@
     <string name="update">Update</string>
     <string name="week">Week %1$s</string>
     <string name="yes">Yes</string>
-    <string name="example_group" translatable="false">УВВ-311</string>
-    <string name="example_lecturer" translatable="false">Иванов Иван</string>
 </resources>
